# oaao.ai-v1

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .php-cs-fixer.dist.php  README.md  composer.json  docker-compose.yml  phpunit.xml.dist  pyproject.toml
.github/workflows/: oaao-ci.yml
Test_Suite/: README.md  conftest.py
Test_Suite/evolution/: test_accs_low_score_triggers_reflection.py  test_iqs_low_score_triggers_clarification.py  test_scorer_version.py  test_skill_self_crystallize.py
Test_Suite/integration/: test_pipeline_event_flow.py
Test_Suite/mocks/: __init__.py  llm_mock.py  mock_core.py
Test_Suite/perf/: test_circuit_breaker_opens.py  test_kv_pool_under_concurrency.py  test_two_box_failover.py
Test_Suite/resilience/: test_hook_exception_isolation.py  test_unknown_agent_kind.py
Test_Suite/smoke/: cli_smoke.py  test_smoke_message_in_out.py
backbone/: .htaccess  Razy.phar  bench_probe_boot.php  config.inc.php  index.php  repository.inc.php  sites.inc.php
backbone/scripts/: .htaccess  bench-http.php  bench-opcache-stat.php  bench-pid-spread.php  bench-worker-counter.php  extract-agent.php  extract-app.php  extract-distributor.php  extract-registry.php  extract-routing.php  grep-phar-shutdown.php  grep-phar.php  list-phar.php  oaao-auth-reset-install.php  oaao-auth-reset-password.php  oaao_endpoints_cli_bootstrap.php  oaao_endpoints_export.php  oaao_endpoints_import.php  oaao_patch_htaccess_library.php  oaao_patch_htaccess_library.sh  opcache-web-status.php  razy-agent.php  razy-app.php  razy-closure.php  razy-distributor.php  razy-main.php
contracts/: README.md
contracts/v1/: chat-run.request.json  corpus-analyze.response.json  corpus-document-classify.json  corpus-extract-unknown.json  error.json  (+13 more)
docker/: Untitled  env.cuda-dev.example  env.example  env.mlx-dev.example  env.prod.example  env.stage.example
docs/: Audit_Report.md  Debug_Guide.md  Evolution_System_Design.md  MIGRATION_LEGACY_OAAO.md  Manus_Gap_Analysis.md  OAAO_90D_Jira_Import.csv  OAAO_90D_Jira_Import_Guide.md  OAAO_90D_Jira_Linear_Backlog.md  OAAO_Content_Studio_Epics.md  OAAO_Content_Studio_Jira_Import.csv  OpenWebUI_Gap_Analysis.md  Test_Catalog.md  W11_S1_SecretsRotationDrill.md  W12_S1_Architecture_Runbook_Rollback.md  W12_S2_UnifiedAPIDocs.md  W13_S1_LoadTest_GoNoGo.md  W1_S2_Baseline_KPI.md  W1_Top20_TechDebt_Owner_Framework.md  W3_S1_RemoveWeakSecretFallback_PR_Plan.md  W3_S3_DeadCode_Retirement.md  W8_S1_RedisCanaryPlan.md  W8_S3_RedisCanaryRollout.md  W9_S1_VaultJobWorkerPhase1.md  phase-iqs-accs-post-stream.md  phase-live-asr-assistant.md
loadtest/: .gitignore  README.md
python/: bootstrap-venv.sh  requirements-ci.txt  requirements-dev.txt  requirements-lint.txt  requirements-orchestrator-app.txt  requirements.txt
scripts/: _sql_audit_local.py  audit_cross_module_requires.sh  ci_check.sh  composer_install.sh  kpi_snapshot.sh  list_php_routes.php  oaao_endpoints_export.ps1  oaao_endpoints_import.ps1  oaao_evolution_cron.sh  oaao_knowledge_refresh_cron.sh  oaao_orchestrator_smoke.sh  oaao_research_cron.sh  oaao_write_build_info.ps1  oaao_write_build_info.sh  perf_regression_gate.sh  php_lint_oaaoai.sh  redis_canary_monitor.ps1  redis_canary_monitor.sh  redis_canary_stage2_enable.ps1  redis_canary_stage2_enable.sh  rotate_dev_secret.ps1  rotate_dev_secret.sh  run_loadtest_k6.ps1  run_loadtest_k6.sh  run_phpunit_oaaoai.sh  sandbox_check.sh  smoke-library-block-adapter.mjs  sql_injection_guard.sh  sql_param_allowlist.txt  start_redis_canary_monitor.ps1
tests/: phpunit-bootstrap.php
(+1525 files in other folders)
